add mock database
